# AICuring

./: .env.example  .gitignore  2026-04-21-50-round-stability-retrospective-summary.md  CLAUDE.md  pyproject.toml
assets/benchmark_scopes/: all-completed-15-turn-models.2026-04-10.json
assets/personas/: blunt-possessive-exclusive-partner.2026-03-28.json  night-owl-playful-girlfriend.2026-03-28.json  soft-spoken-slow-burn-lover.2026-03-28.json
docs/: 2026-04-05-baseline-pool-summary.md  2026-04-07-instability-onset-analysis.md  2026-04-07-turn-retention-report.md  2026-04-07-turn-retention-report.zh.md  2026-04-08-long-horizon-benchmark-overview.md  2026-04-10-aihubmix-kimi-k2.5-rerun.en.md  2026-04-10-aihubmix-kimi-k2.5-rerun.md  2026-04-10-all-completed-15-turn-model-report.md  2026-04-12-true-15-round-retention-report.json  2026-04-12-true-15-round-retention-report.md  2026-04-14-true-50-round-benchmark-overview.md  2026-04-15-true-50-round-retention-intermediate-data.json  2026-04-15-true-50-round-retention-report.json  2026-04-15-true-50-round-retention-report.md  2026-04-19-true-50-round-retention-batches.json  2026-04-19-true-50-round-retention-report.md  benchmark-report-template.md  benchmark-spec-index.md  depression-patient-simulator-tech-plan.md  judge-rubric.md  model-alignment-expression-strategies.md  persona-card-schema.md  scenario-suite-spec.md
tests/: conftest.py  test_cli_aihubmix.py  test_cli_baseline_import.py  test_cli_compare.py  test_cli_openai.py  test_cli_openrouter.py  test_cli_registry.py  test_cli_smoke.py  test_cli_turn_retention.py
(+505 files in other folders)
