[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aicure-benchmark"
version = "0.1.0"
description = "Benchmark-first tooling for adult companion/ERP model evaluation."
readme = "docs/benchmark-spec-index.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2,<3",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
